# ai

./: .gitignore  run.sh
ai-stable-diffusion-intel-oneapi/: setup.sh
amdgpu-sd-on-docker-container/: setup.sh
amdgpu-sd-on-thinkpc-image/: setup.sh
amdgpu-sd-on-windows11-vm/: setup.sh
intel-sd-on-docker-container/: setup.sh
intel-sd-on-ubuntu-base-20-04-amd64/: setup.sh
nvidiagpu-sd-thinkpc-image/: setup.sh
rust-bert-playground/: Cargo.toml  readme.md
rust-bert-playground/src/: http_memory_server.rs  main.rs
rust-bert-playground/src/www/: app.js  index.html  style.css
