[package]
name = "rust-bert-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#rust_bert = "0.20"
rust-bert = "*"

elapsed = "0.1"
ansi_term = "0.12"
#pdf-extract = "0.6"
pdf-extract = { git = "https://github.com/jrmuizel/pdf-extract.git" }
globwalk = "0.8"


hyper = "0.10"
websocket = "0.26"
include_dir = "0.7"
multipart = "0.14"
